--- a/app/src/assets/css/style.css
+++ b/app/src/assets/css/style.css
@@ -2,11 +2,69 @@
 
 body {
     background: #b9b9b9;
-    color: #b8cc24;
+    color: #b9b9b9;
 }
 button {
     background: #8bc5ff;
 }
 div {
-    background: #6f3596;
+
+}
+
+#header{
+    height: 150px;
+    background-color: #9E9E9E;
+}
+
+#header_content{
+    background-color: #444444;
+    height: 100%;
+}
+
+#main_body {
+    height: 1000px;
+    margin-top: 10px;
+    background-color: #8bc5ff;
+}
+
+#body_wrapper{
+    height:100%;
+    background-color: #b8cc24;
+}
+
+#footer {
+    height: 100px;
+    background-color: #000;
+}
+
+#menu{
+    height:50px;
+    background-color: #6d85a9;
+}
+
+#body_container{
+    background-color: beige;
+    height:100%;
+}
+
+.srcbtn{
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #4B54CC;
+}
+
+.srcbtn:not([disabled]):hover {
+    background-color: #7e9cff;
+}
+
+.inpsrc{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+}
+
+md-input-container .md-errors-spacer {
+    min-height: 0;
 }
