Plugine transclude özelliği ile açılır liste eklendi.

--- a/app/src/client/partials/directive.plugin.html
+++ b/app/src/client/partials/directive.plugin.html
@@ -5,8 +5,8 @@
             <div flex="90"><b>{{options.header}}</b></div>
         </div>
     </div>
-    <div style="height: 150px; background-color: #fafafa;">
-
+    <div style="min-height: 150px; background-color: #fafafa;">
+        <div ng-transclude style="height: 100%"></div>
     </div>
 </div>
 <div class="plugin_margin_bottom" ></div>
