thumb container yapıldı

--- a/app/src/client/partials/directive/directive.thumb.html
+++ b/app/src/client/partials/directive/directive.thumb.html
@@ -2,9 +2,9 @@
     <div style="height: 100%; ">
         <div layout="column" style="height: 100%;">
             <div flex="30" style="background-color: #444444; color: #fafafa">Başlık</div>
-            <div flex-gt-sm="70" layout="row">
+            <div flex-gt-sm="70" flex layout="row">
                 <div flex="none" hide show-gt-sm style="width: 100px; background-color: #b8a42c;">resim</div>
-                <div flex>içerik içerik içerik</div>
+                <div flex style="background-color: #fafafa;">içerik içerik içerik</div>
             </div>
         </div>
     </div>
