thumb'a attribute eklendi.

--- a/app/src/client/partials/route/route.mainpage.html
+++ b/app/src/client/partials/route/route.mainpage.html
@@ -1,12 +1,10 @@
 <div style="height: 100%; margin-top: 10px;" >
-    <page-title></page-title>
+    <page-title title="main_page.page_title"></page-title>
     <thumb-container>
-        <thumb></thumb>
-        <thumb></thumb>
-        <thumb></thumb>
-        <thumb></thumb>
-        <thumb></thumb>
-        <thumb></thumb>
+        <thumb attr="main_page"></thumb>
+        <thumb attr="main_page"></thumb>
+        <thumb attr="main_page"></thumb>
+        <thumb attr="main_page"></thumb>
     </thumb-container>
 
 </div>
