--- a/app/src/client/partials/directive/directive.thumb.html
+++ b/app/src/client/partials/directive/directive.thumb.html
@@ -1,11 +1,12 @@
-<div layout-padding flex-gt-md="50" flex="100" style="height: 150px;">
+<div layout-padding flex-gt-md="50" flex="100" style="height: 200px;">
     <div style="height: 100%; ">
         <div layout="column" style="height: 100%;">
-            <div flex="30" style="background-color: #444444; color: #fafafa">Başlık</div>
-            <div flex-gt-sm="70" flex layout="row">
-                <div flex="none" hide show-gt-sm style="width: 100px; background-color: #b8a42c;">resim</div>
-                <div flex style="background-color: #fafafa;">içerik içerik içerik</div>
+            <div flex="20" style="background-color: #444444; color: #fafafa">{{attr.title}}</div>
+            <div flex-gt-sm="65" flex layout="row">
+                <div flex="none" hide show-gt-sm style="width: 120px; background-color: #b8a42c;">{{attr.image}}</div>
+                <div flex style="background-color: #fafafa;">{{attr.content}}</div>
             </div>
+            <div flex="15" style="background-color: darkgray;"></div>
         </div>
     </div>
 </div>
