thumbların paddingleri azaltıldı

--- a/app/src/client/partials/directive/directive.thumb_news.html
+++ b/app/src/client/partials/directive/directive.thumb_news.html
@@ -1,4 +1,4 @@
-<div layout-padding flex="100" style="height: 200px;">
+<div flex="100" style="height: 200px; padding: 8px;">
     <div style="height: 100%; ">
         <div layout="column" style="height: 100%;">
             <div flex="20" style="background-color: #444444; color: #fafafa">{{attr.title}}</div>
