--- a/app/src/client/partials/route/route.mainpage.html
+++ b/app/src/client/partials/route/route.mainpage.html
@@ -1,5 +1,17 @@
 <div style="height: 100%; margin-top: 10px;" >
-    <page-title title="main_page.page_title"></page-title>
+    <div id="slider_main" hide show-gt-sm style="height: 300px; background-color: coral;" >
+        <div style="height: 100%; text-align: center;">
+            <ul rn-carousel rn-carousel-index="0" rn-carousel-auto-slide="3" class="carousel5" style="height: 100%;">
+                <li>Slide 1</li>
+                <li>Slide 2</li>
+                <li>Slide 3</li>
+                <li>Slide 4</li>
+                <li>Slide 5</li>
+                <li>Slide 6</li>
+            </ul>
+        </div>
+    </div>
+    <page-title title="main_page.page_title" style="margin-top: 10px;"></page-title>
     <thumb-container>
         <thumb attr="main_page"></thumb>
         <thumb attr="main_page"></thumb>
