--- a/app/src/assets/css/style.css
+++ b/app/src/assets/css/style.css
@@ -13,7 +13,7 @@ div {
 }
 
 body{
-
+    height: auto;
 }
 
 #header{
@@ -25,7 +25,6 @@ body{
 }
 
 #main_body {
-    height: 1000px;
     margin-top: 10px;
 }
 
@@ -35,6 +34,7 @@ body{
 
 #footer {
     height: 200px;
+    margin-top: 10px;
 }
 
 #menu{
