--- a/app/src/client/partials/route/route.page.html
+++ b/app/src/client/partials/route/route.page.html
@@ -1,1 +1,67 @@
-<h3>{{title}}</h3>
+<div flex layout="column" style="margin-top: 10px;">
+    <div flex layout="column" style="background-color: #6d85a9; padding: 5px;">
+        <div flex style="padding: 10px;">
+            <b>Equifax Hack Exposes Personal Info of 143 Million US Consumers</b>
+        </div>
+        <div flex style="padding:10px;">
+            <b>Author:</b><span>Sait Nuri UYANIK</span> <b> Publish date</b><span>13/06/2018</span>
+        </div>
+        <div flex>
+            <md-fab-toolbar flex md-open="page_fab.isOpen" md-direction="{{page_fab.selectedDirection}}">
+                <md-fab-trigger class="align-with-text">
+                    <md-button aria-label="menu" class="md-fab md-primary">
+                        <md-icon md-svg-src="img/ic_menu.svg"></md-icon>
+                    </md-button>
+                </md-fab-trigger>
+                <md-toolbar>
+                    <md-fab-actions>
+                        <md-button aria-label="Add User">
+
+                        </md-button>
+
+                        <md-button aria-label="Add Group">
+
+                        </md-button>
+                    </md-fab-actions>
+                </md-toolbar>
+            </md-fab-toolbar>
+        </div>
+    </div>
+    <div flex style="margin: 5px;">
+        It's ironic—the company that offers credit monitoring and ID theft protection solutions has itself been compromised, exposing personal information of as many as 143 million Americans—that's almost half the country.
+        Equifax, one of the three largest credit reporting firm in the United States, admitted today that it had suffered a massive data breach somewhere between mid-May and July this year, which it actually discovered on July 29—that means the data of 143 million people were exposed for over 3 months.
+        However, it's unknown why Equifax waited 6 weeks before informing their millions of affected customers about the massive security breach.
+        Based on Equifax's investigation, unknown hackers exploited a security vulnerability on its website to gain unauthorized access to certain files.
+        Stolen data includes consumers' names, Social Security numbers, and birth dates for 143 million Americans, and in some instances, driving licence numbers and credit card numbers for about 209,000 citizens.
+        Also Read: How you can Protect Yourself from possibly the WORST Leak of Personal Data Ever.
+        The company said that some personal information for Canadian and British residents was also compromised.
+        Moreover, reportedly, three senior executives at Equifax, namely John Gamble (CFO), Joseph Loughran and Rodolfo Ploder, sold almost $2 million worth of their shares just days after the company learned of this massive hack.
+        Equifax is currently investigating the security incident and has reportedly hired FireEye's security firm Mandiant to help the company in hack aftermath.
+        Meanwhile, all Equifax customers are advised to visit http://www.equifaxsecurity2017.com website to check if their information has also been stolen. Users just need to enter the last 6 digits of their SSN and last name.
+        However, it is not that simple. The website is not giving a clear answer about whether or not your data may have been affected in the hack, but making it clear to those who were not exposed. Yes, it's confusing.
+        Equifax is asking affected customers to sign up for credit-monitoring and identity theft protection services—isn't this funny?
+        Don't worry; it's free for affected users.
+        The company has not yet confirmed whether the hackers have contacted it for any extortion demand, but since the breach is major, Americans quickly need to take necessary actions to protect themselves and their loved ones.
+        For this, you can head on to our article on How to Protect Yourself after this Security Mishap.
+        Stay tuned for more information, stay safe online.
+    </div>
+    <div flex="noshrink" style="background-color: aquamarine;">
+        <div flex><b>YORUMLAR</b></div>
+        <div flex="noshrink" layout="row" style="height: 150px; background-color: #8bc5ff;">
+            <div flex="25" flex-gt-sm="15" layout="column">
+                <div flex="none" style="height: 60px;">Photo</div>
+                <div flex></div>
+                <div flex>
+                    <md-button style="background-color: crimson; margin: 0; min-height: unset; min-width: unset; width: 100%; height: 100%; font-size: 11px;"><div flex>Yorumu gönder</div></md-button>
+                </div>
+            </div>
+            <div flex layout="column">
+                <div flex style="background-color: #7e9cff;">Yorum Yaz</div>
+            </div>
+        </div>
+        <div flex layout="column">
+            <comment attr=""></comment>
+            <comment attr=""></comment>
+        </div>
+    </div>
+</div>
