Sağ üst sosyal medya iconları bölümü tamamlandı.

--- a/app/src/client/partials/route/route.page.html
+++ b/app/src/client/partials/route/route.page.html
@@ -15,13 +15,8 @@
                 </md-fab-trigger>
                 <md-toolbar>
                     <md-fab-actions>
-                        <md-button aria-label="Add User">
-
-                        </md-button>
-
-                        <md-button aria-label="Add Group">
-
-                        </md-button>
+                        <md-button aria-label="Add User"></md-button>
+                        <md-button aria-label="Add Group"></md-button>
                     </md-fab-actions>
                 </md-toolbar>
             </md-fab-toolbar>
