Single page hariç görsel kısımlar tamamlandı

--- a/app/src/client/partials/directive/directive.pagetitle.html
+++ b/app/src/client/partials/directive/directive.pagetitle.html
@@ -1,4 +1,9 @@
 <div layout="row" layout-wrap style="height: 30px; margin-left: 8px; margin-right: 8px; background-color: #6d85a9; color: #fafafa;">
-    <div flex="initial" style="padding: 3px 10px; text-align: center;"><b>{{title}}</b></div>
-    <div flex style="height: 100%; padding-bottom: 2px;"><div style="height: 100%; background-color: #d4d691;"></div></div>
+    <div flex="initial" layout="row" layout-align="center center" class="md-whiteframe-1dp" style="text-shadow: 2px 2px #525252; padding: 3px 10px; text-align: center;">
+        <b>{{title}}</b>
+    </div>
+    <div flex style="height: 100%;">
+        <div style="height: 92%; background-color: #d4d691;"></div>
+        <div class="md-whiteframe-1dp" style="height: 8%;"></div>
+    </div>
 </div>
