--- a/app/src/client/partials/directive/directive.plugin.html
+++ b/app/src/client/partials/directive/directive.plugin.html
@@ -5,7 +5,7 @@
             <div flex="90"><b>{{options.header}}</b></div>
         </div>
     </div>
-    <div style="min-height: 150px; background-color: #fafafa;">
+    <div style="background-color: #fafafa;">
         <div ng-transclude style="height: 100%"></div>
     </div>
 </div>
