Yorum kısmı bitmek üzere, drop-down tarzı olacak

--- a/app/src/client/partials/directive/directive.pagetitle.html
+++ b/app/src/client/partials/directive/directive.pagetitle.html
@@ -1,5 +1,5 @@
 <div layout="row" layout-wrap style="height: 30px; margin-left: 8px; margin-right: 8px; background-color: #6d85a9; color: #fafafa;">
-    <div flex="initial" layout="row" layout-align="center center" class="md-whiteframe-1dp" style="text-shadow: 2px 2px #525252; padding: 3px 10px; text-align: center;">
+    <div flex="initial" layout="row" layout-align="center center" class="md-whiteframe-1dp" style="text-shadow: 2px 2px #737373; padding: 3px 10px; text-align: center; font-size: 12px;">
         <b>{{title}}</b>
     </div>
     <div flex style="height: 100%;">
