--- a/app/src/client/partials/route/route.page.html
+++ b/app/src/client/partials/route/route.page.html
@@ -3,14 +3,14 @@
         <div flex="none" style="padding: 5px; height: 100%;" layout="row" layout-align="center center">
             <div flex><h2>Facebook slapped with $1.43 million fine for violating users' privacy in Spain</h2></div>
         </div>
-        <div flex="none" layout="column" layout-gt-xs="row" layout-align="center center" style="height: 100%; padding-left: 5px; padding-right: 5px;">
+        <div flex="none" layout="column" layout-gt-xs="row" layout-align="center center" style="height: 100%; padding-left: 5px; padding-right: 5px; margin-bottom: 5px;">
             <div flex="initial" style="height: 100%;" layout="row" layout-align="center center">
                 <div id="title_date" flex="initial" layout="row" layout-align="center center"  style="height: 100%;">
                     <div flex="none" layout="row" layout-align="center center" ><img src="img/calendar.svg" alt="calendar" style="height: 18px; width: 18px;"></div>
                     <div flex="none" layout="row" layout-align="center none" style="padding: 2px; color: #eaeaea; font-size: 12px;">11.02.1992</div>
                 </div>
                 <div id="title_author" flex="initial" layout="row" layout-align="center center" style="height: 100%; margin-left: 5px;">
-                    <div flex="initial" layout="row" layout-align="center center"><img src="img/user.svg" alt="calendar" style="height: 18px; width: 18px;"></div>
+                    <div flex="initial" layout="row" layout-align="center center"><img src="img/author.svg" alt="calendar" style="height: 18px; width: 18px;"></div>
                     <div flex layout="row" layout-align="center none" style="margin-left:2px; padding: 2px; color: #eaeaea; font-size: 12px;">Sait Nuri UYANIK</div>
                 </div>
             </div>
@@ -61,23 +61,10 @@
             Stay tuned for more information, stay safe online.
         </p>
     </div>
-    <div flex="noshrink" style="background-color: aquamarine;">
-        <div flex><b>YORUMLAR</b></div>
-        <div flex="noshrink" layout="row" style="height: 150px; background-color: #8bc5ff;">
-            <div flex="25" flex-gt-sm="15" layout="column">
-                <div flex="none" style="height: 60px;">Photo</div>
-                <div flex></div>
-                <div flex>
-                    <md-button style="background-color: crimson; margin: 0; min-height: unset; min-width: unset; width: 100%; height: 100%; font-size: 11px;"><div flex>Yorumu gönder</div></md-button>
-                </div>
-            </div>
-            <div flex layout="column">
-                <div flex style="background-color: #7e9cff;">Yorum Yaz</div>
-            </div>
-        </div>
-        <div flex layout="column">
-            <comment attr=""></comment>
-            <comment attr=""></comment>
-        </div>
+    <div flex="noshrink" layout="column" style="background-color: aquamarine;">
+        <div flex="init" style=""><h3>YORUMLAR</h3></div>
+        <write-comment></write-comment>
+        <write-reply></write-reply>
+        <write-reply></write-reply>
     </div>
 </div>
