Yorum kısmına ufak bir ekleme

--- a/app/src/client/partials/route/route.page.html
+++ b/app/src/client/partials/route/route.page.html
@@ -62,7 +62,7 @@
         </p>
     </div>
     <div flex="noshrink" layout="column" style="background-color: aquamarine;">
-        <div flex="init" style=""><h3>YORUMLAR</h3></div>
+        <div flex="init" style><h3>YORUMLAR</h3></div>
         <write-comment></write-comment>
         <write-reply></write-reply>
         <write-reply></write-reply>
