Yorum yazma kısmı düzeltildi. Gönder ve Reply butonu eklenecek

--- a/app/src/client/partials/route/route.page.html
+++ b/app/src/client/partials/route/route.page.html
@@ -74,7 +74,8 @@
     <div flex="noshrink" layout="column" style="">
         <div flex="init" style><h3>YORUMLAR</h3></div>
         <write-comment></write-comment>
-        <write-reply></write-reply>
-        <write-reply></write-reply>
+        <comment-base></comment-base>
+        <comment-reply></comment-reply>
+        <comment-reply></comment-reply>
     </div>
 </div>
