--- a/app/src/assets/css/style.css
+++ b/app/src/assets/css/style.css
@@ -102,3 +102,15 @@ md-fab-toolbar .md-fab-toolbar-wrapper {
     overflow: hidden;
     height:52px;
 }
+
+div.md-resize-wrapper{
+    height: 100%;
+}
+
+textarea{
+    height: 100%;
+}
+
+md-input-container .md-input{
+    height: unset;
+}
