--- a/app/src/client/partials/directive/directive.write_comment.html
+++ b/app/src/client/partials/directive/directive.write_comment.html
@@ -11,29 +11,16 @@
             </div>
         </div>
     </div>
-    <div flex="90" flex-xs="80" style="background-color: #ccc67a; padding: 5px;">
-        <div id="comment_section" flex="initial">
-            Don't worry; it's free for affected users. The company has not yet confirmed whether the hackers have contacted it for any extortion demand, but since the breach is major, Americans quickly need to take necessary actions to protect themselves and their loved ones. For this, you can head on to our article on How to Protect Yourself after this Security Mishap. Stay tuned for more information, stay safe online.
+    <div flex="90" flex-xs="80" layout="column" style="background-color: #a4a4a4; padding-top: 10px; margin-right: 2px;">
+        <div flex="initial" style="padding-left: 2px; padding-right: 2px;">
+            <md-input-container class="md-block" style="background-color: #c0ccbe; height: 100%; margin: unset; padding: unset; border-top: 1px solid #a4a4a4">
+                <label>Yorum Yaz</label>
+                <textarea style="height: 0;" rows="5" md-select-on-focus ></textarea>
+            </md-input-container>
         </div>
-        <div id="comment_tools" layout="row"  layout-align="start center" style="height: 25px; background-color: darkgray;">
-            <div flex="initial" style="padding: 1px; margin-left: 10px; margin-right: 10px; font-size: 12px;">
-                <b>Reply</b>
-            </div>
-            <div flex="initial" layout="row" style="padding: 4px; height: 100%; margin-left: 10px; margin-right: 10px; font-size: 12px;">
-               <div flex="initial" layout="row"  layout-align="center center">
-                   <img src="img/like.svg" alt="" style="height: 100%; width: 20px; ">
-               </div>
-                <div flex="initial" layout="row"  layout-align="center center">
-                    <span style="margin-left: 5px;">12</span>
-                </div>
-            </div>
-            <div flex="initial" layout="row" style="padding: 4px; height: 100%; margin-left: 10px; margin-right: 10px; font-size: 12px;">
-                <div flex="initial" layout="row"  layout-align="center center">
-                    <img src="img/dislike.svg" alt="" style="height: 100%; width: 20px; ">
-                </div>
-                <div flex="initial" layout="row"  layout-align="center center">
-                    <span style="margin-left: 5px;">12</span>
-                </div>
+        <div flex="initial" layout="row" layout-align="end center">
+            <div flex layout="row" layout-align="end center" style="padding-right: 10px; padding-left: 10px;" >
+                <img src="img/send_comment.png" alt="send comment" style="height: 24px; width: 24px;">
             </div>
         </div>
     </div>
