Gönder ve Reply butonları eklendi.

--- a/app/src/client/partials/directive/directive.comment_base.html
+++ b/app/src/client/partials/directive/directive.comment_base.html
@@ -16,8 +16,10 @@
             Don't worry; it's free for affected users. The company has not yet confirmed whether the hackers have contacted it for any extortion demand, but since the breach is major, Americans quickly need to take necessary actions to protect themselves and their loved ones. For this, you can head on to our article on How to Protect Yourself after this Security Mishap. Stay tuned for more information, stay safe online.
         </div>
         <div id="comment_tools" layout="row"  layout-align="start center" style="height: 25px; background-color: darkgray;">
-            <div flex="initial" style="padding: 1px; margin-left: 10px; margin-right: 10px; font-size: 12px;">
-                <b>Reply</b>
+            <div flex="initial" style="padding: 1px; margin-left: 10px; margin-right: 10px; font-size: 12px; ">
+                <md-button style="height: 25px; margin: unset;  min-width: unset; min-height: unset; line-height: unset;">
+                    <span style="height: 100%; width: 100%; text-align: center; text-transform: capitalize; font-weight: bold;">Reply</span>
+                </md-button>
             </div>
             <div flex="initial" layout="row" style="padding: 4px; height: 100%; margin-left: 10px; margin-right: 10px; font-size: 12px;">
                <div flex="initial" layout="row"  layout-align="center center">
