--- a/app/src/client/partials/directive/directive.write_comment.html
+++ b/app/src/client/partials/directive/directive.write_comment.html
@@ -19,8 +19,10 @@
             </md-input-container>
         </div>
         <div flex="initial" layout="row" layout-align="end center">
-            <div flex layout="row" layout-align="end center" style="padding-right: 10px; padding-left: 10px;" >
-                <img src="img/send_comment.png" alt="send comment" style="height: 24px; width: 24px;">
+            <div layout="row" layout-align="end center" style="">
+                <md-button style="height: 36px; margin: unset; padding-right: 10px; min-width: unset; min-height: unset; ">
+                    <img src="img/send_comment.png" alt="send comment" style="height: 36px; width: 48px;">
+                </md-button>
             </div>
         </div>
     </div>
