Controller dosyaları oluşturuldu. Servis klasörü oluşturuldu. Servisler için grunt ayarları yapıldı. Sonraki adım servis dosyalarının oluşturulması

--- a/app/src/client/partials/directive/directive.write_comment.html
+++ b/app/src/client/partials/directive/directive.write_comment.html
@@ -19,8 +19,8 @@
             </md-input-container>
         </div>
         <div flex="initial" layout="row" layout-align="end center">
-            <div layout="row" layout-align="end center" style="">
-                <md-button style="height: 36px; margin: unset; padding-right: 10px; min-width: unset; min-height: unset; ">
+            <div layout="row" layout-align="end center" style="padding: 2px;">
+                <md-button style="height: ;: 36px; margin: unset; padding-right: 10px; min-width: unset; min-height: unset; ">
                     <img src="img/send_comment.png" alt="send comment" style="height: 36px; width: 48px;">
                 </md-button>
             </div>
