Plugin ve page altyapısı hazırdır.

--- a/app/src/assets/css/style.css
+++ b/app/src/assets/css/style.css
@@ -20,6 +20,12 @@ img {
     pointer-events: none;
 }
 
+a {
+    text-decoration: none ;
+    color:black;
+    cursor:pointer;
+}
+
 #header{
     height: 150px;
 }
