--- a/app/src/client/partials/route/route.mainpage.html
+++ b/app/src/client/partials/route/route.mainpage.html
@@ -17,13 +17,13 @@
     </div>
 
     <!--Başlık-->
-    <page-title title="main_page.page_title" style="margin-top: 10px;"></page-title>
+    <page-title title="page_title" style="margin-top: 10px;"></page-title>
 
     <!--Sayfadaki konular-->
     <thumb-container>
-        <thumb attr="main_page"></thumb>
-        <thumb attr="main_page"></thumb>
-        <thumb attr="main_page"></thumb>
-        <thumb attr="main_page"></thumb>
+        <thumb attr="content"></thumb>
+        <thumb attr="content"></thumb>
+        <thumb attr="content"></thumb>
+        <thumb attr="content"></thumb>
     </thumb-container>
 </div>
