--- a/app/src/client/partials/route/route.article.html
+++ b/app/src/client/partials/route/route.article.html
@@ -1,9 +1,9 @@
 <div style="height: 100%; margin-top: 10px;" >
-    <page-title title="article_page.page_title"></page-title>
+    <page-title title="page_title"></page-title>
     <thumb-container>
-        <thumb attr="article_page"></thumb>
-        <thumb attr="article_page"></thumb>
-        <thumb attr="article_page"></thumb>
-        <thumb attr="article_page"></thumb>
+        <thumb attr="content"></thumb>
+        <thumb attr="content"></thumb>
+        <thumb attr="content"></thumb>
+        <thumb attr="content"></thumb>
     </thumb-container>
 </div>
