--- a/app/src/client/partials/route/route.news.html
+++ b/app/src/client/partials/route/route.news.html
@@ -1,8 +1,8 @@
 <div style="height: 100%; margin-top: 10px;" >
-    <page-title title="news_page.page_title"></page-title>
+    <page-title title="page_title"></page-title>
     <thumb-container>
-        <thumb-news attr="news_page"></thumb-news>
-        <thumb-news attr="news_page"></thumb-news>
-        <thumb-news attr="news_page"></thumb-news>
+        <thumb-news attr="content"></thumb-news>
+        <thumb-news attr="content"></thumb-news>
+        <thumb-news attr="content"></thumb-news>
     </thumb-container>
 </div>
